<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/header_bar_layout"
        layout="@layout/header_bar_layout" />

    <LinearLayout
        android:id="@+id/verifylayout"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:background="@drawable/textbox_bg"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/no"
            android:textColor="@color/grey_text_color" />

        <EditText
            android:id="@+id/mobile_EditText"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/textbox_bg"
            android:inputType="textPhonetic"
            android:padding="5dp"
            android:hint="@string/mobile"
            android:textColor="@color/grey_text_color"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/verifylayout"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:text="@string/verify_text"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/send_verifycode_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@id/verifylayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/textbox_bg_color"
        android:padding="5dp"
        android:text="@string/send"
        android:textColor="@color/text_border_color"
        android:textStyle="bold"
        android:textSize="18sp" />

</RelativeLayout>