<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/header_bar_layout"
        layout="@layout/header_bar_layout" />

    <LinearLayout
        android:id="@+id/image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_bar_layout"
        android:layout_marginTop="50dp"
        android:gravity="center" >

        <ImageView
            android:id="@+id/ride_now_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ride_now_icon" />
    </LinearLayout>

    <Button
        android:id="@+id/fb_signup_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/image_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/textbox_bg_color"
        android:padding="5dp"
        android:text="@string/fb_signup"
        android:textColor="@color/text_border_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/google_signup_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/fb_signup_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/textbox_bg_color"
        android:padding="5dp"
        android:text="@string/google_signup"
        android:textColor="@color/text_border_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/or_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/google_signup_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <View
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/header_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/or"
            android:textColor="@color/header_color" />

        <View
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/header_color" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@id/google_signup_btn"
        android:layout_below="@+id/or_layout"
        android:layout_marginTop="10dp"
        android:background="@color/textbox_bg_color"
        android:padding="5dp"
        android:text="@string/login"
        android:textColor="@color/text_border_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/app_signup_btn"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_below="@+id/or_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/login_btn"
        android:background="@color/textbox_bg_color"
        android:padding="5dp"
        android:text="@string/sign_up"
        android:textColor="@color/text_border_color"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>