<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/header_bar_layout"
        layout="@layout/header_bar_layout" />

    <LinearLayout
        android:id="@+id/image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_bar_layout"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <ImageView
            android:id="@+id/signup_profileImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ride_now_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dualSigninLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/email_signin_btn"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/textbox_bg_color"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/text_border_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_gravity="center_vertical"
            android:text="@string/or_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/phone_signin_btn"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="3dp"
            android:background="@color/textbox_bg_color"
            android:gravity="center"
            android:text="@string/phone"
            android:textColor="@color/text_border_color"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signin_namelayout"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_below="@id/dualSigninLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="46dp"
            android:background="@drawable/ic_name"
            android:gravity="center" />

        <EditText
            android:id="@+id/signin_name_EditText"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/textbox_bg"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="@color/grey_text_color"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signin_passwordlayout"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_below="@id/signin_namelayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="46dp"
            android:background="@drawable/ic_password"
            android:gravity="center" />

        <EditText
            android:id="@+id/signin_password_EditText"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/textbox_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/grey_text_color"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@id/signin_passwordlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/textbox_bg_color"
        android:padding="5dp"
        android:text="@string/login"
        android:textColor="@color/text_border_color"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>