<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg_color"
    android:gravity="center"
    android:orientation="vertical" >

    <TableLayout
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/Padding_verySmall" 
        >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_samll"
            android:gravity="center" >

            <ImageView
                android:layout_width="@dimen/icon_size_mid"
                android:layout_height="@dimen/icon_size_mid"
                android:layout_marginRight="@dimen/padding_mid"
                android:background="@drawable/ic_btn_from" />

            <AutoCompleteTextView
                android:id="@+id/edt_from"
                android:layout_width="@dimen/textBox_width"
                android:layout_height="@dimen/textBox_hight"
                android:background="@drawable/textbox_bg"
                android:hint="@string/from"
                 android:textColor="@color/text_color"
                android:paddingLeft="@dimen/padding_samll" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Padding_verySmall"
            android:gravity="center" >

            <ImageView
                android:layout_width="@dimen/icon_size_mid"
                android:layout_height="@dimen/icon_size_mid"
                android:layout_marginRight="@dimen/padding_mid"
                android:background="@drawable/ic_btn_to" />

            <AutoCompleteTextView
                android:id="@+id/edt_to"
                android:layout_width="@dimen/textBox_width"
                android:layout_height="@dimen/textBox_hight"
                android:background="@drawable/textbox_bg"
                android:hint="@string/to"
               
                 android:textColor="@color/text_color"
                android:paddingLeft="@dimen/padding_samll" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Padding_verySmall"
            android:background="@color/home_bg_color"
            android:gravity="center" >

            <ImageView
                android:layout_width="@dimen/icon_size_mid"
                android:layout_height="@dimen/icon_size_mid"
                android:layout_marginRight="@dimen/padding_mid"
                android:background="@drawable/ic_btn_date" />

            <Button android:id="@+id/btn_date"
                android:hint="@string/date"
                android:gravity="left|center_vertical"
                android:layout_width="@dimen/textBox_width"
                android:layout_height="@dimen/textBox_hight"
                android:background="@drawable/textbox_bg" 
                android:textColor="@color/text_color"
                android:paddingLeft="@dimen/padding_samll"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Padding_verySmall"
            android:background="@color/home_bg_color"
            android:gravity="center"
            android:weightSum="5.5" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/icon_size_mid"
                android:layout_marginRight="@dimen/padding_mid"
                android:layout_weight="1.1"
                android:background="@drawable/ic_btn_time" />

            <Button
                android:id="@+id/btn_time"
                android:hint="@string/time"
                android:gravity="center_vertical|left"
                android:paddingLeft="@dimen/padding_samll"
                android:layout_width="0dp"
                android:layout_height="@dimen/textBox_hight"
                android:layout_weight="2"
                android:textColor="@color/text_color"
                android:background="@drawable/textbox_bg" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/icon_size_mid"
                android:layout_marginLeft="@dimen/padding_samll"
                android:layout_marginRight="@dimen/padding_mid"
                android:layout_weight="1.1"
                android:background="@drawable/ic_btn_seats" />

            <EditText
                android:id="@+id/edt_seats"
                android:layout_width="0dp"
                android:layout_height="@dimen/textBox_hight"
                android:layout_weight="1"
                android:inputType="number"
                android:textColor="@color/text_color"
                android:background="@drawable/textbox_bg" />
        </TableRow>
    </TableLayout>

     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/padding_large"
         android:background="@color/base_color_dark"
         android:orientation="horizontal"
         android:padding="@dimen/Padding_verySmall" >
<RadioGroup 
    android:id="@+id/privacyGroup"
    android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         
    >
    
     <RadioButton
             android:id="@+id/radioButton_public"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="@string/privacy_public_" />
<View
    android:layout_width="1dp"
    android:layout_height="fill_parent"
    
    android:background="@color/home_bg_color" />
         <RadioButton
             android:id="@+id/radioButton_private"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="@string/privacy_private" />
    
</RadioGroup>
        
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_large"

        android:background="@color/base_color_dark"
        android:orientation="horizontal"
        android:padding="@dimen/Padding_verySmall" >

        <Button
            android:id="@+id/btn_offer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/base_color_dark"
            android:text="@string/offer"
            android:textColor="@color/home_bg_color"
            android:textStyle="bold" 
            />

<View
    android:layout_width="1dp"
    android:layout_height="fill_parent"
    android:layout_marginLeft="1dp"
    android:layout_marginRight="1dp"
    android:background="@color/home_bg_color" />

        <Button
            android:id="@+id/btn_request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/home_bg_color"
            android:text="@string/request"
            android:textColor="@color/base_color_dark"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        
        android:id="@+id/btn_createRide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_large"
        android:layout_marginRight="@dimen/padding_large"
        android:background="@color/base_color_dark"
        android:text="@string/create_ride"
        android:textColor="@color/home_bg_color"
        android:textStyle="bold" />

</LinearLayout>